--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,21 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
+﻿# dependencies
+node_modules
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # next.js
-/.next/
-/out/
+.next
+out
+.next/cache
+.vercel
 
-# production
-/build
+# env
+.env*
+!.env.example
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+pnpm-debug.log*
